Criação da pasta images e adição da imagem.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1 align="center">Atividade Prática - Aula 10</h1>
+    <img
+      src="images/belle-maluf--1nUc0TDdYg-unsplash.jpg"
+      alt="Foto do Rio de Janeiro"
+    />
   </body>
 </html>
