Ajuste do tamanho da imagem.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <img
       src="images/belle-maluf--1nUc0TDdYg-unsplash.jpg"
       alt="Foto do Rio de Janeiro"
+      height="800px"
+      width="1410px"
     />
+    <p>
+      Créditos de imagem:
+      <a href="https://unsplash.com/pt-br/@bellemaluf" target="_blank"
+        >Belle Maluf</a
+      >
+    </p>
   </body>
 </html>
