Adição dos créditos da imagem no footer.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
       height="800px"
       width="1410px"
     />
+  </body>
+  <footer>
     <p>
       Créditos de imagem:
       <a href="https://unsplash.com/pt-br/@bellemaluf" target="_blank"
         >Belle Maluf</a
       >
     </p>
-  </body>
+  </footer>
 </html>
